Начал настройку инфраструктуры для интеграционных тестов